--- a/ui/index.html
+++ b/ui/index.html
@@ -45,19 +45,25 @@
       </div>
     </nav>
 
-    <header class="bg-primary text-white">
+    <!-- <header class="bg-primary text-white">
       <div class="container text-center">
         <h1>Timeline of Great Humans!</h1>
         <p class="lead">Everyone who remembers his own education remembers teachers, not methods and techniques. The teacher is the heart of the educational system.</p>
       </div>
-    </header>
+    </header> -->
 
     <section id="about">
-      <div class="container">
-        <div class="row">
+      <div class="container-fluid">
+        <div class="row container-fluid">
           <div class="col-lg-12 mx-auto">
-            <h2>TimeLine</h2>
-            <div id="timeline-container" class="">
+            <h2>
+              TimeLine
+              <small class="text-muted small">Human Count:<span id="human-count"></span></small>
+            </h2>
+            <div class="col-lg-12 mx-auto">
+              <button id="create-timeline" type="button" class="btn btn-primary">Create Timeline</button>
+            </div>
+            <div id="timeline-container" class="container col-lg-12 mx-auto">
 
             </div>
             <!-- <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
@@ -68,14 +74,11 @@
               <li>Minimal custom CSS so you are free to explore your own unique design options</li>
             </ul> -->
           </div>
-          <div class="col-lg-12 mx-auto">
-            <button id="create-timeline" type="button" class="btn btn-primary">Create Timeline</button>
-          </div>
         </div>
       </div>
     </section>
 
-    <section id="services" class="bg-light">
+    <!-- <section id="services" class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
@@ -132,7 +135,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
