--- a/ui/index.html
+++ b/ui/index.html
@@ -156,7 +156,9 @@
     <script src="js/scrolling-nav.js"></script>
 
     <!-- Logic and code for the challenge -->
-    <script src="js/human.js"></script>
+    <!-- <script src="js/human.js"></script> -->
+    <script src="js/simply.js"></script>
+
 
   </body>
 
