--- a/ui/index.html
+++ b/ui/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Parikshit Tiwari :: AltSchool Tech Challenge">
-    <meta name="author" content="Parik Tiwari">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Parikshit Tiwari :: AltSchool Tech Challenge">
+  <meta name="author" content="Parik Tiwari">
 
-    <title>Parikshit Tiwari :: AltSchool Tech Challenge</title>
+  <title>Parikshit Tiwari :: AltSchool Tech Challenge</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
+  <!-- Hover core CSS -->
+  <link href="vendor/hover/hover.css" rel="stylesheet">
 
-  </head>
+  <!-- Custom styles for this template -->
+  <link href="css/scrolling-nav.css" rel="stylesheet">
 
-  <body id="page-top">
+</head>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Tech Challenge</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
+<body id="page-top">
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Tech Challenge</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -42,124 +46,111 @@
             </li>
           </ul>
         </div> -->
-      </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- <header class="bg-primary text-white">
-      <div class="container text-center">
-        <h1>Timeline of Great Humans!</h1>
-        <p class="lead">Everyone who remembers his own education remembers teachers, not methods and techniques. The teacher is the heart of the educational system.</p>
-      </div>
-    </header> -->
-
-    <section id="about">
-      <div class="container-fluid">
-        <div class="row container-fluid">
-          <div class="col-lg-12 mx-auto">
-            <h2>
-              TimeLine
-              <small class="text-muted small">Human Count:<span id="human-count"></span></small>
-            </h2>
-            <div class="col-lg-12 mx-auto">
-              <button id="create-timeline" type="button" class="btn btn-primary">Create Timeline</button>
-            </div>
-            <div id="timeline-container" class="container col-lg-12 mx-auto">
-
-            </div>
-            <!-- <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-            <ul>
-              <li>Clickable nav links that smooth scroll to page sections</li>
-              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-            </ul> -->
-          </div>
+  <header class="bg-primary text-white">
+    <div class="row">
+      <div class="col-lg-4 mx-auto">
+        <div class="container text-center">
+          <h1>Timeline of Great Humans!</h1>
+          <p class="lead">Everyone who remembers his own education remembers teachers, not methods and techniques. The teacher
+            is the heart of the educational system.</p>
         </div>
       </div>
-    </section>
+    </div>
+  </header>
 
-    <!-- <section id="services" class="bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Services we offer</h2>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Add Human</button>
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Add New Human</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    <form>
-                      <div class="form-group">
-                        <label for="human-name" class="col-form-label">Full Name:</label>
-                        <input type="text" class="form-control" id="human-name">
-                      </div>
-                      <div class="form-group">
-                        <label for="birth-year" class="col-form-label">Birth:</label>
-                        <input type="text" class="form-control" id="birth-year">
-                      </div>
-                      <div class="form-group">
-                        <label for="death-year" class="col-form-label">Death:</label>
-                        <input type="text" class="form-control" id="death-year">
-                      </div>
-                      <div class="form-group">
-                        <label for="summary-text" class="col-form-label">Summary:</label>
-                        <textarea class="form-control" id="summary-text"></textarea>
-                      </div>
-                    </form>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Add Human</button>
+  <section id="about">
+    <div class="container-fluid">
+      <div class="row container-fluid">
+        <div class="col-lg-12 mx-auto">
+          <h2>
+            TimeLine
+          </h2>
+          <small class="text-muted small">Human Count:<span id="human-count">0</span></small>
+          <div class="col-lg-2">
+            <div class="alert alert-danger" role="alert">
+                Double Click on a timeline box to delete the entry
+            </div>
+            </div>
+          <div id="timeline-container" class="container col-lg-12 mx-auto">
+
+          </div>
+          <div class="row">
+            <div class="col-lg-4 mx-auto">
+              <button id="create-timeline" type="button" class="btn btn-primary btn-block">Create Timeline</button>
+            </div>
+            <div class="add-human-modal col-lg-4 mx-auto">
+              <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#addHuman" data-whatever="@mdo">Add
+                Human</button>
+              <div class="modal fade" id="addHuman" tabindex="-1" role="dialog" aria-labelledby="addHumanLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="addHumanLabel">Add New Human</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <form>
+                        <div class="form-group">
+                          <label for="human-name" class="col-form-label">Full Name:</label>
+                          <input type="text" class="form-control" name="human-name" id="human-name">
+                        </div>
+                        <div class="form-group">
+                          <label for="birth-year" class="col-form-label">Birth:</label>
+                          <input type="text" class="form-control" name="birth-year" id="birth-year">
+                        </div>
+                        <div class="form-group">
+                          <label for="death-year" class="col-form-label">Death:</label>
+                          <input type="text" class="form-control" name="death-year" id="death-year">
+                        </div>
+                        <div class="form-group">
+                          <label for="summary-text" class="col-form-label">Summary:</label>
+                          <textarea class="form-control" name="summary-text" id="summary-text"></textarea>
+                        </div>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button id="add-human-btn" type="button" class="btn btn-primary">Add Human</button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Contact us</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
-          </div>
-        </div>
-      </div>
-    </section> -->
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; LP</p>
+    </div>
+    <!-- /.container -->
+  </footer>
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
-      </div>
-      <!-- /.container -->
-    </footer>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Custom JavaScript for this theme -->
+  <script src="js/scrolling-nav.js"></script>
 
-    <!-- Custom JavaScript for this theme -->
-    <script src="js/scrolling-nav.js"></script>
-
-    <!-- Logic and code for the challenge -->
-    <script src="js/human.js"></script>
-    <!-- <script src="js/simply.js"></script> -->
+  <!-- Logic and code for the challenge -->
+  <script src="js/human.js"></script>
+  <!-- <script src="js/simply.js"></script> -->
+  <script src="https://unpkg.com/scrollreveal"></script>
 
 
-  </body>
+</body>
 
 </html>
