--- a/ui/index.html
+++ b/ui/index.html
@@ -28,24 +28,11 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Tech Challenge</a>
+      <a class="navbar-brand js-scroll-trigger" href="/">Tech Challenge</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-            </li>
-          </ul>
-        </div> -->
     </div>
   </nav>
 
@@ -65,15 +52,8 @@
     <div class="container-fluid">
       <div class="row container-fluid">
         <div class="col-lg-12 mx-auto">
-          <h2>
-            TimeLine
-          </h2>
-          <small class="text-muted small">Human Count:<span id="human-count">0</span></small>
-          <div class="col-lg-2">
-            <div class="alert alert-danger" role="alert">
-                Double Click on a timeline box to delete the entry
-            </div>
-            </div>
+          <h2>Human Lifetimes</h2>
+          <small class="text-muted">Human Count: <span id="human-count">0</span></small>
           <div id="timeline-container" class="container col-lg-12 mx-auto">
 
           </div>
@@ -120,6 +100,10 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="myAlert-top alert alert-danger" role="alert">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <strong>Double Click</strong> on a timeline box to delete the entry
             </div>
           </div>
         </div>
